✨ All constants endpoints
